--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,8 @@ html {
 h1,
 h2,
 h3,
-p,{
+p,
+div{
   margin-top:0;
   margin-bottom: 0;
 }
@@ -39,6 +40,7 @@ section{
 }
 button{
   cursor: pointer;
+  border: none;
 }
 :root {
   --card-set-gap: 24px;
@@ -52,6 +54,9 @@ button{
   --brand-color-blue: #404bbf;
   --brand-color-black-1: #000000;
   --brand-color-white-2: #e7e9fc;
+  --brand-color-radius: #8E8F99;
+  --brand-color-svg: #31D0AA;
+  --brand-color-button: #404BBF;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -164,6 +169,30 @@ body {
   color:var(--brand-color-black-text);
   text-decoration: none;
 }
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+.icon:hover,
+.icon:focus{
+  fill:var(--brand-color);
+}
+.icon-envelop{
+  display:inline-block;
+  margin-left: 40px;
+
+}
+.icon-envelop:hover,
+.icon-envelop:focus{
+ fill:var(--brand-color);
+}
+.infodevstudio::before{
+
+}
 .infodevstudio:hover,
 .infodevstudio:focus {
   color:var(--brand-color);
@@ -180,7 +209,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  margin-left: 40px;
+  
   letter-spacing: 0.02em;
   color:var(--brand-color-black-text);
   text-decoration: none;
@@ -231,8 +260,8 @@ body {
   margin-left: auto; 
   margin-right: auto;
   background:var(--brand-color);
-  border: 1px solid var(--brand-color-black-1);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  /* border: 1px solid var(--brand-color-black-1); */
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
   border-radius: 4px;
   margin-top: 48px;
   align-items: center;
@@ -240,6 +269,12 @@ body {
   letter-spacing: 0.04em;
   color: var(--brand-color-white-text);
   width: 170px;
+}
+.button-studio:hover,
+.button-studio:focus{
+  background: var(--brand-color-button);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 button .link:click {
   color: var(--brand-color-blue);
@@ -408,9 +443,11 @@ margin-bottom: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-top: 100px;
   padding-bottom: 100px;
+  display: flex;
+  flex-direction:row;
 }
 .lowerpart-block {
-  display: block;
+  display: inline-block;
   color: var(--brand-color-white-background-color);
   text-decoration: none;
   font-family: 'Raleway';
@@ -430,12 +467,16 @@ margin-bottom: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  display: block;
+  display: flex;
   color: var(--brand-color-white-2);
   width: 264px;
   margin-bottom: 0;
+  margin-top: 16px;
 }
-
+.foto{
+  border: 1px solid #000000;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
 /* portfolio */
 .container-portfolio{
   width: 1158px;
@@ -503,6 +544,11 @@ margin-bottom: 0;
   background: var(--brand-color-white-background);
   
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.foto-text-title:hover,
+.foto-text-title:focus{
+  border: 0.5px solid var(-brand-color-white-background-color);
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .cartca{
   border-left: 0.5px solid var(--brand-color-white-background-color);
@@ -574,4 +620,140 @@ padding-bottom: 32px;
 .foto-portfolio{
   width: 360px;
   
+}
+.customers{
+  display: flex;
+  gap: 24px;
+}
+.customers-panei-icon{
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  width: 168px;
+  height: 88px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  gap: 24px;
+  border: 0.5px solid var(--brand-color-radius);
+  border-radius: 4px;
+  fill: var(--brand-color-radius);
+}
+.customers-panei-icon:hover,
+.customers-panei-icon:focus{
+  border-color:var(--brand-color) ;
+  fill:var(--brand-color) ;
+}
+.icon-svg{
+  fill: #000000; 
+}
+.icon-styles{
+  display: flex;
+  gap: 24px;
+}
+.icon-styles-svg{
+  width: 264px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  padding: 24px 100px;
+  background: var(--brand-color-white-background-color);
+ border-radius: 4px;
+ 
+}
+.icon-svg-title{
+  width:32px;
+  height: 32px;
+  fill: var(--brand-color-white-background-color);
+
+}
+.title-icon{
+  font-size: 36px;
+  line-height:1.16;
+  margin-bottom: 72px;
+  margin-top: 0;
+  text-align: center;
+  }
+.wardrobe-icon{
+  width: 232px;
+  height: 48px;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
+
+}  
+.wardrobe-list{
+  display: flex;
+  gap: 24px;
+
+  
+}
+.wardrobe-title-icon{
+  display: flex;
+  list-style: none;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--brand-color);
+    border-radius: 50%;
+}
+.wardrobe-icon-svg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+    height: 50%;
+}
+.container-footer{
+  width: 1158px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+
+}
+.footer-block{
+  display: flex;
+  flex-direction: column;
+  width: 264px;
+  margin-right: 0;
+}
+.footer-icon{
+  width: 208px;
+  margin-left: 120px;
+}
+.footer-list{
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+
+  
+}
+.footer-title-icon{
+  display: flex;
+  list-style: none;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+.footer-title-icon:hover,
+.footer-title-icon:focus{
+  background-color:var(--brand-color-svg);
+}
+.footer-icon-svg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+    height: 50%;
+}
+.footer-title{
+  Font-size: 16px;
+  line-height:2;
+  color: var(--brand-color-white-background);
+  margin-top: 0;margin-bottom: 0;
 }
