--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+  margin-left: 40px;
   
   letter-spacing: 0.02em;
   color:var(--brand-color-black-text);
@@ -226,10 +227,10 @@ body {
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center;
-  margin-top: 0px;
+  margin: 0 auto;
   padding-top: 192px;
   padding-bottom: 192px;
-
+  max-width: 1440px;
 }
 .Business{
 
@@ -262,6 +263,7 @@ body {
   background:var(--brand-color);
   /* border: 1px solid var(--brand-color-black-1); */
   /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin-top: 48px;
   align-items: center;
@@ -269,12 +271,11 @@ body {
   letter-spacing: 0.04em;
   color: var(--brand-color-white-text);
   width: 170px;
+  height: 51px;
 }
 .button-studio:hover,
 .button-studio:focus{
-  background: var(--brand-color-button);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 button .link:click {
   color: var(--brand-color-blue);
@@ -474,8 +475,7 @@ margin-bottom: 0;
   margin-top: 16px;
 }
 .foto{
-  border: 1px solid #000000;
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  
 }
 /* portfolio */
 .container-portfolio{
@@ -625,14 +625,19 @@ padding-bottom: 32px;
   display: flex;
   gap: 24px;
 }
+.customers-icon{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .customers-panei-icon{
   display: flex;
   list-style: none;
   justify-content: center;
   width: 168px;
   height: 88px;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  
+  
   gap: 24px;
   border: 0.5px solid var(--brand-color-radius);
   border-radius: 4px;
@@ -653,10 +658,11 @@ padding-bottom: 32px;
 }
 .icon-styles-svg{
   width: 264px;
+  height: 112px;
   list-style: none;
   display: flex;
   justify-content: center;
-  padding: 24px 100px;
+ align-items: center;
   background: var(--brand-color-white-background-color);
  border-radius: 4px;
  
@@ -675,22 +681,26 @@ padding-bottom: 32px;
   text-align: center;
   }
 .wardrobe-icon{
-  width: 232px;
-  height: 48px;
-  margin-top: 8px;
-  margin-left: auto;
-  margin-right: auto;
+width: 100%;
+height: 100%;
+display: flex;
+  justify-content: center;
+  align-items: center;
 
 }  
 .wardrobe-list{
   display: flex;
+  justify-content: center;
   gap: 24px;
+  margin-top: 8px;
+  margin-left: auto;
+  margin-right: auto;
 
   
 }
 .wardrobe-title-icon{
-  display: flex;
-  list-style: none;
+    display: flex;
+    list-style: none;
     justify-content: center;
     align-items: center;
     width: 40px;
@@ -705,14 +715,16 @@ padding-bottom: 32px;
   width: 50%;
     height: 50%;
 }
-.container-footer{
-  width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+.wardrobe-icon-svg-a{
   display: flex;
-
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.container-footer{
+  display: flex;
+align-items: baseline;
 }
 .footer-block{
   display: flex;
